--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Stick Hero with Canvas</title>
+  <title>StickGame</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -12,7 +12,7 @@
   <div id="score"></div>
   <canvas id="game" width="375" height="375"></canvas>
   <div id="introduction">Hold down the mouse to stretch out a stick</div>
-  <div id="perfect">DOUBLE SCORE</div>
+  <div id="perfect">AMAZING!!</div>
   <button id="restart">RESTART</button>
 </div>
 <!-- partial -->
