--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="container">
   <div id="score"></div>
   <canvas id="game" width="375" height="375"></canvas>
-  <div id="introduction">Hold down the mouse to stretch out a stick</div>
+  <div id="introduction">Hold down the mouse to stretch out the stick and begin the game</div>
   <div id="perfect">AMAZING!!</div>
   <button id="restart">RESTART</button>
 </div>
